@@ -25,8 +25,6 @@ import static org.openqa.selenium.remote.Dialect.W3C;
 import static org.openqa.selenium.remote.http.Contents.asJson;
 import static org.openqa.selenium.remote.http.HttpMethod.POST;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import java.io.StringReader;
 import java.io.UncheckedIOException;
 import java.net.URI;
@@ -168,7 +166,7 @@ class SessionCleanUpTest {
       Router router = new Router(tracer, clientFactory, sessions, queue, distributor);
       handler.addHandler(router);
 
-      server = new NettyServer(new BaseServerOptions(new MapConfig(ImmutableMap.of())), handler);
+      server = new NettyServer(new BaseServerOptions(new MapConfig()), handler);
 
       server.start();
 
@@ -207,17 +205,14 @@ class SessionCleanUpTest {
               new CompoundConfig(
                   additionalConfig,
                   new TomlConfig(new StringReader(String.join("\n", rawConfig))),
-                  new MapConfig(
-                      ImmutableMap.of(
-                          "server", ImmutableMap.of("port", PortProber.findFreePort())))));
+                  new MapConfig(Map.of("server", Map.of("port", PortProber.findFreePort())))));
 
       Server<?> nodeServer = new NodeServer().asServer(nodeConfig).start();
 
       waitToHaveCapacity(distributor);
 
       HttpRequest request = new HttpRequest(POST, "/session");
-      request.setContent(
-          asJson(ImmutableMap.of("capabilities", ImmutableMap.of("alwaysMatch", capabilities))));
+      request.setContent(asJson(Map.of("capabilities", Map.of("alwaysMatch", capabilities))));
 
       HttpClient client = clientFactory.createClient(server.getUrl());
       HttpResponse httpResponse = client.execute(request);
@@ -300,10 +295,10 @@ class SessionCleanUpTest {
               new SessionRequest(
                   new RequestId(UUID.randomUUID()),
                   Instant.now(),
-                  ImmutableSet.of(W3C),
-                  ImmutableSet.of(capabilities),
-                  ImmutableMap.of(),
-                  ImmutableMap.of()));
+                  Set.of(W3C),
+                  Set.of(capabilities),
+                  Map.of(),
+                  Map.of()));
       assertThat(result.isRight()).isTrue();
 
       SessionId id = result.right().getSession().getId();
@@ -323,10 +318,10 @@ class SessionCleanUpTest {
               new SessionRequest(
                   new RequestId(UUID.randomUUID()),
                   Instant.now(),
-                  ImmutableSet.of(W3C),
-                  ImmutableSet.of(capabilities),
-                  ImmutableMap.of(),
-                  ImmutableMap.of()));
+                  Set.of(W3C),
+                  Set.of(capabilities),
+                  Map.of(),
+                  Map.of()));
       assertThat(sessionResponse.isLeft()).isTrue();
       assertThat(distributor.getStatus().getNodes()).isEmpty();
     }
